fix mobile spacing for 'lets get coding'

--- a/app/styles/tailwind_output.css
+++ b/app/styles/tailwind_output.css
@@ -602,6 +602,14 @@ video {
   gap: 0.5rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
@@ -814,6 +822,12 @@ body {
   padding-right: 1.5rem;
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+@media (min-width: 640px) {
+  .sm\:gap-4 {
+    gap: 1rem;
+  }
 }
 
 @media (min-width: 768px) {
